--- a/src/mipagina.html
+++ b/src/mipagina.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Lucas Galindo</title>
+    <title>Lucas Galindo.</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
